--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -18,7 +18,8 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {    
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     runtimeOnly("org.postgresql:postgresql")
 	implementation 'org.springframework.boot:spring-boot-starter-web'
