configuration od security filter chain

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/blogdb
 spring.datasource.username=abdelilah
 spring.datasource.password=abdelilah
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.devtools.add-properties=true
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
