ui fixing issue

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.username=abdelilah
 spring.datasource.password=abdelilah
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.devtools.add-properties=true
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=5000MB
 spring.servlet.multipart.max-request-size=5000MB
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
 media.upload-dir=/home/abdelilah/Desktop/01-blog-recovry/01-Blog/backend/uploads/
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
