--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,5 +16,8 @@ security.jwt.expiration-time=3600000
 # Show handler mappings
 # spring.jpa.open-in-view=false
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
-# Show DispatcherServlet activity
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+logging.level.org.springframework.web.filter=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.apache.catalina=DEBUG
+logging.level.org.apache.coyote=DEBUG
