updating some unused logic

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,8 +15,8 @@ security.jwt.secret-key=3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c
 security.jwt.expiration-time=3600000
 # Show handler mappings
 # spring.jpa.open-in-view=false
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
-logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
+logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
 logging.level.org.springframework.web.filter=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.apache.catalina=DEBUG
