--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3.8'
 
 services:
+  # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
-    container_name: blog-postgres
+    container_name: coffee-house-postgres
     environment:
       POSTGRES_DB: blogdb
       POSTGRES_USER: abdelilah
@@ -12,6 +13,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - coffee-network
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U abdelilah -d blogdb"]
@@ -19,5 +22,64 @@ services:
       timeout: 5s
       retries: 5
 
+  # Spring Boot Backend
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: coffee-house-backend
+    environment:
+      SPRING_PROFILES_ACTIVE: prod
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/blogdb
+      SPRING_DATASOURCE_USERNAME: abdelilah
+      SPRING_DATASOURCE_PASSWORD: abdelilah
+      MEDIA_UPLOAD_DIR: /app/uploads/
+      SECURITY_JWT_SECRET_KEY: 3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c272e007b
+      SECURITY_JWT_EXPIRATION_TIME: 3600000
+    ports:
+      - "8080:8080"
+    volumes:
+      - backend_uploads:/app/uploads
+    networks:
+      - coffee-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+
+  # Angular Frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: coffee-house-frontend
+    environment:
+      API_URL: http://localhost:8080
+    ports:
+      - "4200:80"
+    networks:
+      - coffee-network
+    depends_on:
+      - backend
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+
+networks:
+  coffee-network:
+    driver: bridge
+
 volumes:
   postgres_data:
+    driver: local
+  backend_uploads:
+    driver: local
