--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,7 +24,9 @@ logging.level.org.apache.coyote=DEBUG
 # Show what's happening in the persistence context
 logging.level.org.hibernate.event.internal=TRACE
 logging.level.org.hibernate.engine.internal=DEBUG
-
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+logging.level.org.springframework.security=TRACE
 # Show SQL
 # spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
